test/types/void/void-variable-use-3.good
void-variable-use-3.chpl:5: error: cannot use the value of a void variable
