test/types/void/void-variable-use-3.chpl
class c {
  var v: void;
}

writeln((new c()).v);
